Тестовый перевод готов

--- a/More Vanilla Turrets/Languages/Russian/DefInjected/ResearchProjectDef/MVT_ResearchProjects.xml
+++ b/More Vanilla Turrets/Languages/Russian/DefInjected/ResearchProjectDef/MVT_ResearchProjects.xml
@@ -23,7 +23,7 @@
   <VulcanCannon.description>Позволяет производить Турель "Вулкан" - Большая, укрепленная турель с установленной на ней высокоскорострельной автопушкой Вулкан.</VulcanCannon.description>
 
   <DevastatorMortar.label>Миномет "Разрушитель"</DevastatorMortar.label>
-  <DevastatorMortar.description>Позволяет производить Миномет "Разрушитель" - </DevastatorMortar.description>
+  <DevastatorMortar.description>Позволяет производить миномет "Разрушитель" - магнитная катапульту, которая запускает плазменные снаряды с большей скоростью, точностью и гораздо большим радиусом взрыва благодаря её залпу из пяти снарядов.</DevastatorMortar.description>
 
 
 </LanguageData>
