--- a/More Vanilla Turrets/Languages/Russian/DefInjected/ThingDef/MVT_Buildings_Security.xml
+++ b/More Vanilla Turrets/Languages/Russian/DefInjected/ThingDef/MVT_Buildings_Security.xml
@@ -3,82 +3,50 @@
 
   <!-- gun complex -->
 
-  <GunComplex.label>複合機槍巢</GunComplex.label>
-  <GunComplex.description>裝載了機槍的外圍防禦，只需要有人操控而不需要電力。損毀時爆炸半徑為1。</GunComplex.description>
-
-  <Bullet_GunComplex.label>複合機槍子彈</Bullet_GunComplex.label>
-  <Gun_GunComplex.label>複合機槍</Gun_GunComplex.label>
-  <Gun_GunComplex.description>重型機槍。</Gun_GunComplex.description>
+  <GunComplex.label>Оружейный комплекс</GunComplex.label>
+  <GunComplex.description>Управляемый поселенцами оружейный комплекс с установленным на нем тяжелым пулеметом. Взрывается в небольшом радиусе 1 м. при уничтожении.</GunComplex.description>
 
 
   <!-- rocket complex -->
 
-  <RocketComplex.label>複合火箭巢</RocketComplex.label>
-  <RocketComplex.description>古老經典的武器，需要人員操控和裝填。幸運的是，在良好的光學瞄準和致命的爆炸範圍使得這種武器在前線仍然是可怕的存在。損毀時爆炸半徑為3。</RocketComplex.description>
-
-  <Bullet_ComplexRocket.label>複合火箭</Bullet_ComplexRocket.label>
-  <Gun_RocketComplex.label>複合火箭發射器</Gun_RocketComplex.label>
-  <Gun_RocketComplex.description>安裝在石板上的複合火箭發射器。</Gun_RocketComplex.description>
+  <RocketComplex.label>Ракетный комплекс</RocketComplex.label>
+  <RocketComplex.description>Управляемый поселенцами ракетный комплекс с установленной на нем ракетной установкой. Более старый класс оружия, требующий ручного управления и перезарядки. К счастью, с помощью приличной оптики и радиуса взрыва его ракет, его присутствие все еще ужасает атакующих в первых рядах. Взрывается в радиусе 3 м. при уничтожении.</RocketComplex.description>
 
 
   <!-- military grade turret -->
 
-  <MilitaryTurretGun.label>軍用炮塔</MilitaryTurretGun.label>
-  <MilitaryTurretGun.description>自動炮塔的威力升級版。加長的雙槍管提供更大的射程，以及更高的連射次數。損毀時極高幾率爆炸，半徑為4。</MilitaryTurretGun.description>
-
-  <Bullet_TurretMilitary.label>軍用炮塔子彈</Bullet_TurretMilitary.label>
-  <Gun_TurretMilitary.label>軍用炮塔用槍</Gun_TurretMilitary.label>
-  <Gun_TurretMilitary.description>裝載於炮塔的製作精良的槍械。</Gun_TurretMilitary.description>
+  <MilitaryTurretGun.label>Турель "Кобра"</MilitaryTurretGun.label>
+  <MilitaryTurretGun.description>Более мощный вариант автоматизированной турели. Ведёт огонь по принципу пулемёта — очередями. Более длинные двойные стволы обеспечивают увеличенный радиус действия и большую скорострельность. Имеет более высокий шанс взорваться в радиусе 4 м.</MilitaryTurretGun.description>
 
 
   <!-- shredder turret -->
 
-  <ShredderTurretGun.label>粉碎者炮塔</ShredderTurretGun.label>
-  <ShredderTurretGun.description>粉碎者炮塔是為近距離作戰而設計的。損毀時不會發生爆炸，使其成為室內防禦的完美選擇，唯一的缺點是比起普通的炮塔占據更多的空間。</ShredderTurretGun.description>
-
-  <Bullet_TurretShredder.label>粉碎者炮塔子彈</Bullet_TurretShredder.label>
-  <Gun_TurretShredder.label>粉碎者炮塔用槍</Gun_TurretShredder.label>
-  <Gun_TurretShredder.description>裝載於炮塔的粉碎者霰彈槍。</Gun_TurretShredder.description>
+  <ShredderTurretGun.label>Турель "Кромсатель"</ShredderTurretGun.label>
+  <ShredderTurretGun.description>Позволяет производить смертоносную турель "Кромсатель" ближнего действия. Стреляет зарядами с большим количеством картечи.Она не взрывается при уничтожении, таким образом, что делает её идеальным выбором для внутренней обороны, единственным недостатком является то, что она занимает больше места, чем обычный вариант.</ShredderTurretGun.description>
 
 
   <!-- precision turret -->
 
-  <PrecisionTurretGun.label>精準炮塔</PrecisionTurretGun.label>
-  <PrecisionTurretGun.description>大口徑槍械炮塔。發射單發子彈，但先進的瞄準設備使其在極遠距離上非常精準。損毀時爆炸幾率很小，半徑為2.5。</PrecisionTurretGun.description>
-
-  <Bullet_TurretPrecision.label>精準炮塔子彈</Bullet_TurretPrecision.label>
-  <Gun_TurretPrecision.label>精準炮塔用槍</Gun_TurretPrecision.label>
-  <Gun_TurretPrecision.description>裝載於炮塔的精準槍械。</Gun_TurretPrecision.description>
+  <PrecisionTurretGun.label>Турель"Шершень"</PrecisionTurretGun.label>
+  <PrecisionTurretGun.description>Турель "Шершень" - Дальнобойная высокоточная турель, способную убить одним выстрелом. Ведёт полуавтоматический огонь с больших расстояний. Современная оптика позволяет ему поставить один, но точный выстрел на довольно большие расстояния. Взрывается редко в радиусе 2,5 м.</PrecisionTurretGun.description>
 
 
   <!-- blast turret -->
 
-  <BlastTurretGun.label>爆裂炮塔</BlastTurretGun.label>
-  <BlastTurretGun.description>爆裂炮塔是為近距離範圍攻擊而設計的，每次發射3發破片榴彈。損毀時爆炸半徑為4.5。</BlastTurretGun.description>
-
-  <Bullet_BlastCharge.label>爆裂榴彈</Bullet_BlastCharge.label>
-  <Gun_BlastCharge.label>爆裂炮塔榴彈發射器</Gun_BlastCharge.label>
-  <Gun_BlastCharge.description>裝載於固定哨戒基座的榴彈發射器。</Gun_BlastCharge.description>
+  <BlastTurretGun.label>Турель "Улей"</BlastTurretGun.label>
+  <BlastTurretGun.description>Турель "Улей" предназначена для поражения противника на близком расстоянии, запустив залпом 3 осколочных гранаты. Взрывается в радиусе 4,5 при разрушении.</BlastTurretGun.description>
 
 
   <!-- vulcan cannon -->
 
-  <VulcanCannon.label>火神炮</VulcanCannon.label>
-  <VulcanCannon.description>火力持續的增強型機槍炮塔，堅固耐用以及怪獸版的火力。結構高達、射程遠，但也導致無法精確瞄準並且無法部署於室內。損毀時爆炸半徑為5.1。</VulcanCannon.description>
-
-  <Bullet_VulcanCannon.label>火神炮子彈</Bullet_VulcanCannon.label>
-  <Gun_VulcanCannon.label>火神炮</Gun_VulcanCannon.label>
-  <Gun_VulcanCannon.description>裝載於炮塔的製作精良的槍械。</Gun_VulcanCannon.description>
+  <VulcanCannon.label>Турель "Вулкан"</VulcanCannon.label>
+  <VulcanCannon.description>Большая, укрепленная турель с установленной на ней высокоскорострельной автопушкой Вулкан, которая стреляет непрерывно. Очень прочная, но энергоемкая. Она высокая и дальнобойная, но из-за этого он не может прицеливаться под себя и не может быть помещен в помещении. Взрывается в радиусе 5 м. при уничтожении.</VulcanCannon.description>
 
 
   <!-- Devastator mortar -->
 
-  <Turret_DevastatorMortarBomb.label>毀滅者迫擊炮</Turret_DevastatorMortarBomb.label>
-  <Turret_DevastatorMortarBomb.description>磁力彈弓系統發射的等離子炮彈擁有更高的速度、精度，得益於連射的5發炮彈而有更大的爆炸半徑。不消耗炮彈但需要大量的電力。損毀時爆炸半徑為10，需要非常小心。</Turret_DevastatorMortarBomb.description>
-
-  <Bullet_DevastatorBomb.label>高爆毀滅者炮彈</Bullet_DevastatorBomb.label>
-  <Artillery_DevastatorBomb.label>毀滅者迫擊炮</Artillery_DevastatorBomb.label>
-  <Artillery_DevastatorBomb.description>毀滅者發射器。可越過墻體發射炮彈。精度低但射程遠並且彈頭速度高。</Artillery_DevastatorBomb.description>
+  <Turret_DevastatorMortarBomb.label>Миномет "Разрушитель"</Turret_DevastatorMortarBomb.label>
+  <Turret_DevastatorMortarBomb.description>Магнитная катапульта, которая запускает плазменные снаряды с большей скоростью, точностью и гораздо большим радиусом взрыва благодаря его залпу из пяти снарядов. Не потребляет снаряды, но требует большой энергомощности. Остерегайтесь огромного взрыва в радиусе 10 м. при уничтожении.</Turret_DevastatorMortarBomb.description>
 
 
 </LanguageData>
