--- a/More Vanilla Turrets/Languages/Russian/DefInjected/ThingDef/MVT_Buildings_Security.xml
+++ b/More Vanilla Turrets/Languages/Russian/DefInjected/ThingDef/MVT_Buildings_Security.xml
@@ -10,43 +10,43 @@
   <!-- rocket complex -->
 
   <RocketComplex.label>Ракетный комплекс</RocketComplex.label>
-  <RocketComplex.description>Управляемый поселенцами ракетный комплекс с установленной на нем ракетной установкой. Более старый класс оружия, требующий ручного управления и перезарядки. К счастью, с помощью приличной оптики и радиуса взрыва его ракет, его присутствие все еще ужасает атакующих в первых рядах. Взрывается в радиусе 3 м. при уничтожении.</RocketComplex.description>
+  <RocketComplex.description>Управляемый поселенцами комплекс с ракетной установкой. С помощью приличной оптики и радиуса взрыва его ракет, его присутствие все еще ужасает атакующих в первых рядах. Взрывается в радиусе 3 м. при уничтожении.</RocketComplex.description>
 
 
   <!-- military grade turret -->
 
   <MilitaryTurretGun.label>Турель "Кобра"</MilitaryTurretGun.label>
-  <MilitaryTurretGun.description>Более мощный вариант автоматизированной турели. Ведёт огонь по принципу пулемёта — очередями. Более длинные двойные стволы обеспечивают увеличенный радиус действия и большую скорострельность. Имеет более высокий шанс взорваться в радиусе 4 м.</MilitaryTurretGun.description>
+  <MilitaryTurretGun.description>Более мощный вариант автоматической турели. Ведёт огонь по принципу пулемёта — очередями. Двойные стволы дают увеличенный радиус действия и большую скорострельность. Имеет высокий шанс взорваться в радиусе 4 м.</MilitaryTurretGun.description>
 
 
   <!-- shredder turret -->
 
   <ShredderTurretGun.label>Турель "Кромсатель"</ShredderTurretGun.label>
-  <ShredderTurretGun.description>Позволяет производить смертоносную турель "Кромсатель" ближнего действия. Стреляет зарядами с большим количеством картечи.Она не взрывается при уничтожении, таким образом, что делает её идеальным выбором для внутренней обороны, единственным недостатком является то, что она занимает больше места, чем обычный вариант.</ShredderTurretGun.description>
+  <ShredderTurretGun.description>Турель "Кромсатель" - ближнего действия. Стреляет зарядами с большим количеством картечи.Она не взрывается при уничтожении, что делает её идеальным выбором для внутренней обороны. Единственным недостатком является то, что она занимает больше места, чем обычный вариант.</ShredderTurretGun.description>
 
 
   <!-- precision turret -->
 
-  <PrecisionTurretGun.label>Турель"Шершень"</PrecisionTurretGun.label>
-  <PrecisionTurretGun.description>Турель "Шершень" - Дальнобойная высокоточная турель, способную убить одним выстрелом. Ведёт полуавтоматический огонь с больших расстояний. Современная оптика позволяет ему поставить один, но точный выстрел на довольно большие расстояния. Взрывается редко в радиусе 2,5 м.</PrecisionTurretGun.description>
+  <PrecisionTurretGun.label>Турель "Шершень"</PrecisionTurretGun.label>
+  <PrecisionTurretGun.description>Турель "Шершень" - Дальнобойная высокоточная турель, способная убить одним выстрелом. Ведёт полуавтоматический огонь с больших расстояний. Взрывается редко в радиусе 2,5 м.</PrecisionTurretGun.description>
 
 
   <!-- blast turret -->
 
   <BlastTurretGun.label>Турель "Улей"</BlastTurretGun.label>
-  <BlastTurretGun.description>Турель "Улей" предназначена для поражения противника на близком расстоянии, запустив залпом 3 осколочных гранаты. Взрывается в радиусе 4,5 при разрушении.</BlastTurretGun.description>
+  <BlastTurretGun.description>Турель "Улей" предназначена для поражения противника на близком расстоянии, запуская залпом 3 осколочных гранаты. Взрывается в радиусе 4,5 при разрушении.</BlastTurretGun.description>
 
 
   <!-- vulcan cannon -->
 
   <VulcanCannon.label>Турель "Вулкан"</VulcanCannon.label>
-  <VulcanCannon.description>Большая, укрепленная турель с установленной на ней высокоскорострельной автопушкой Вулкан, которая стреляет непрерывно. Очень прочная, но энергоемкая. Она высокая и дальнобойная, но из-за этого он не может прицеливаться под себя и не может быть помещен в помещении. Взрывается в радиусе 5 м. при уничтожении.</VulcanCannon.description>
+  <VulcanCannon.description>Большая, укрепленная турель с установленной на ней скорострельной автопушкой Вулкан, которая стреляет непрерывно. Очень прочная, но энергоемкая. Она высокая и дальнобойная, из-за этого не может прицеливаться под себя. Взрывается в радиусе 5 м. при уничтожении.</VulcanCannon.description>
 
 
   <!-- Devastator mortar -->
 
   <Turret_DevastatorMortarBomb.label>Миномет "Разрушитель"</Turret_DevastatorMortarBomb.label>
-  <Turret_DevastatorMortarBomb.description>Магнитная катапульта, которая запускает плазменные снаряды с большей скоростью, точностью и гораздо большим радиусом взрыва благодаря его залпу из пяти снарядов. Не потребляет снаряды, но требует большой энергомощности. Остерегайтесь огромного взрыва в радиусе 10 м. при уничтожении.</Turret_DevastatorMortarBomb.description>
+  <Turret_DevastatorMortarBomb.description>Магнитная катапульта, которая запускает плазменные снаряды с большой скоростью, точностью и гораздо большим радиусом взрыва, благодаря залпу из пяти снарядов. Не потребляет снаряды, но требует большой энергомощности. Остерегайтесь огромного взрыва в радиусе 10 м. при уничтожении.</Turret_DevastatorMortarBomb.description>
 
 
 </LanguageData>
